Revert "Alteração do título"
This reverts commit e69fedbff8e232252ad58ecc7146072b25612f1b.

--- a/Módulo L/ex004/index.html
+++ b/Módulo L/ex004/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <main>
-        <h1>Tempo de duração da partida de Xadrez</h1>
+        <h1>Tempo de duração da partida</h1>
         <div>
             <label for="ladoA">Lado A</label>
             <input type="number" id="ladoA">
