inicio do ex006 de js

--- a/Módulo L/ex006/index.html
+++ b/Módulo L/ex006/index.html
@@ -12,11 +12,11 @@
             <h1>Prefeitura Municipal</h1>
             <div class="container-form">
                 <label for="nome">Nome</label>
-                <input type="text" id="nome">
+                <input type="text" id="nome" required>
                 <label for="salario">Salário</label>
-                <input type="number"id="salario"><br>
+                <input type="number"id="salario" required min="0"><br>
                 <label for="numeroFilhos">Número de filhos</label>
-                <input type="number" id="nmrFilhos">
+                <input type="number" id="nmrFilhos" required min="0">
                 <input type="button" id="registrar" value="Registrar">
                 <input type="button" id="encerrar" value="Encerrar">
             </div>
