--- a/Módulo L/ex006/index.html
+++ b/Módulo L/ex006/index.html
@@ -19,6 +19,7 @@
                 <input type="number" id="nmrFilhos" required min="0">
                 <input type="button" id="registrar" value="Registrar">
                 <input type="button" id="encerrar" value="Encerrar">
+                <p id="resultado"></p>
             </div>
         </section>
     </main>
