--- a/Módulo K/index.html
+++ b/Módulo K/index.html
@@ -9,29 +9,33 @@
 <body>
     <div id="calc" class="calc">
         <div id="div-nome" class="div-nome">
-            <p>Calculadora</p>
         </div>
         <div id="div-display" class="div-display">
             <p id="display">0</p>
         </div>
         <div id="div-teclas" class="div-teclas">
-            <button id="t7" class="tecla">7</button>
-            <button id="t8" class="tecla">8</button>
-            <button id="t9" class="tecla">9</button>
-            <button id="tsoma" class="tecla teclaOp">+</button>
-            <button id="t4" class="tecla">4</button>
-            <button id="t5" class="tecla">5</button>
-            <button id="t6" class="tecla">6</button>
-            <button id="tsubtracao" class="tecla teclaOp">-</button>
-            <button id="t1" class="tecla">1</button>
-            <button id="t2" class="tecla">2</button>
-            <button id="t3" class="tecla">3</button>
-            <button id="tmultiplicacao" class="tecla teclaOp">x</button>
-            <button id="t0" class="tecla">0</button>
-            <button id="tseparador" class="tecla">,</button>
-            <button id="tigual" class="tecla teclaOp">=</button>
-            <button id="tigual" class="tecla teclaOp">÷</button>
+            <button id="t(" class="tecla num">(</button>
+            <button id="t)" class="tecla num">)</button>
+            <button id="toff" class="tecla teclaOp">Off</button>
+            <button id="tlimpar" class="tecla teclaOp">Cl.</button>
+            <button id="t7" class="tecla num">7</button>
+            <button id="t8" class="tecla num">8</button>
+            <button id="t9" class="tecla num">9</button>
+            <button id="tsoma" class="tecla teclaOp op">+</button>
+            <button id="t4" class="tecla num">4</button>
+            <button id="t5" class="tecla num">5</button>
+            <button id="t6" class="tecla num">6</button>
+            <button id="tsubtracao" class="tecla teclaOp op">-</button>
+            <button id="t1" class="tecla num">1</button>
+            <button id="t2" class="tecla num">2</button>
+            <button id="t3" class="tecla num">3</button>
+            <button id="tmultiplicacao" class="tecla teclaOp op">x</button>
+            <button id="t0" class="tecla num">0</button>
+            <button id="tseparador" class="tecla num">,</button>
+            <button id="tigual" class="tecla teclaOp res">=</button>
+            <button id="tigual" class="tecla teclaOp op">÷</button>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
