--- a/Módulo K/ex001/index.html
+++ b/Módulo K/ex001/index.html
@@ -36,6 +36,6 @@
             <button id="tigual" class="tecla teclaOp op">÷</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="calculadora.js"></script>
 </body>
 </html>
