--- a/Módulo K/ex007/index.html
+++ b/Módulo K/ex007/index.html
@@ -9,5 +9,6 @@
 <body>
     <div id="div_data"></div>
     <div id="div_relogio">00:00:00</div>
+    <script src="relogio.js"></script>
 </body>
 </html>
