EX: olhos acompanham o mouse

--- a/Módulo K/ex010/index.html
+++ b/Módulo K/ex010/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="olhos">
+        <img src="img/olho-direito.png" alt="olho direito" class="olho" id="olho-direito">
+        <img src="img/olho-esquerdo.png" alt="olho esquerdo" class="olho" id="olho-esquerdo">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
