API005 - Testando o envio de dados para o back

--- a/modulo-n/api003/index.html
+++ b/modulo-n/api003/index.html
@@ -6,9 +6,10 @@
     <title>Rick and Morty</title>
 </head>
 <body>
-    <h1>Sorteando imagens de Rick and Morty</h1>
+    <h1>Digite um número entre 1 e 826</h1>
     <div id="img"></div>
-    <button id="sorteio">Sorteio</button>
+    <input type="number" name="id_personagem" id="id_personagem">
+    <button id="ver_imagem">Ver imagem</button>
     <script src="script.js"></script>
 </body>
 </html>
